--- a/_locales/zh_TW/messages.json
+++ b/_locales/zh_TW/messages.json
@@ -275,9 +275,6 @@
   "goToReview": {
     "message": "給我們五星好評"
   },
-  "urlButtonHint": {
-    "message": "將純文字網址轉為可點擊的連結，點擊可在新分頁開啟"
-  },
   "runBtn": {
     "message": "執行"
   },
@@ -287,15 +284,6 @@
   "themeLight": {
     "message": "淺色"
   },
-  "watermarkRemoverHint": {
-    "message": "啟用後，自動去除 Gemini 生成圖片上的 Nano Banana 浮水印"
-  },
-  "watermarkRemoverDownload": {
-    "message": "下載無浮水印圖片"
-  },
-  "watermarkTabName": {
-    "message": "去除浮水印"
-  },
   "formulaFormatTitle": {
     "message": "選擇複製格式"
   },
@@ -303,10 +291,10 @@
     "message": "資料遷移"
   },
   "exportTitle": {
-    "message": "匯出數據"
+    "message": "手動同步"
   },
   "exportHint": {
-    "message": "將本插件在本瀏覽器的數據匯出為 JSON 文件，用於備份或遷移到其他瀏覽器。"
+    "message": "透過 JSON 檔案手動備份或恢復數據，用於遷移到其他瀏覽器。"
   },
   "exportBtn": {
     "message": "匯出數據"
@@ -373,5 +361,11 @@
   },
   "chatTimeLabelHint": {
     "message": "在每條訊息上顯示發送時間，關閉後時間記錄仍會保存"
+  },
+  "gdriveTitle": {
+    "message": "Google Drive 雲端同步"
+  },
+  "gdriveHint": {
+    "message": "將數據備份到你的 Google Drive 中，實現多設備同步。"
   }
 }
