--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -296,9 +296,6 @@
   "goToReview": {
     "message": "Rate us 5 stars"
   },
-  "urlButtonHint": {
-    "message": "Convert plain text URLs to clickable links that open in a new tab"
-  },
   "runBtn": {
     "message": "Run"
   },
@@ -307,15 +304,6 @@
   },
   "themeLight": {
     "message": "Light"
-  },
-  "watermarkRemoverHint": {
-    "message": "When enabled, automatically removes Nano Banana watermarks from Gemini-generated images"
-  },
-  "watermarkRemoverDownload": {
-    "message": "Download without watermark"
-  },
-  "watermarkTabName": {
-    "message": "Watermark"
   },
   "zxvkpm": {
     "message": "View All"
@@ -330,10 +318,10 @@
     "message": "Data Migration"
   },
   "exportTitle": {
-    "message": "Export Data"
+    "message": "Manual Sync"
   },
   "exportHint": {
-    "message": "Export all settings and favorites to a JSON file for backup or migration to other devices."
+    "message": "Manually back up or restore data via JSON file for migration to other browsers."
   },
   "exportBtn": {
     "message": "Export Data"
@@ -409,5 +397,11 @@
   },
   "chatTimeLabelHint": {
     "message": "Display send time on each message. Time records are saved even when disabled"
+  },
+  "gdriveTitle": {
+    "message": "Google Drive Sync"
+  },
+  "gdriveHint": {
+    "message": "Back up data to your Google Drive for multi-device sync."
   }
 }
