--- a/_locales/ko/messages.json
+++ b/_locales/ko/messages.json
@@ -275,9 +275,6 @@
   "goToReview": {
     "message": "별점 5점 부탁드려요"
   },
-  "urlButtonHint": {
-    "message": "일반 텍스트 URL을 클릭 가능한 링크로 변환하여 새 탭에서 열기"
-  },
   "runBtn": {
     "message": "실행"
   },
@@ -287,15 +284,6 @@
   "themeLight": {
     "message": "라이트"
   },
-  "watermarkRemoverHint": {
-    "message": "활성화하면 Gemini 생성 이미지에서 Nano Banana 워터마크를 자동으로 제거합니다"
-  },
-  "watermarkRemoverDownload": {
-    "message": "워터마크 없이 다운로드"
-  },
-  "watermarkTabName": {
-    "message": "워터마크 제거"
-  },
   "formulaFormatTitle": {
     "message": "복사 형식 선택"
   },
@@ -303,10 +291,10 @@
     "message": "데이터 마이그레이션"
   },
   "exportTitle": {
-    "message": "데이터 내보내기"
+    "message": "수동 동기화"
   },
   "exportHint": {
-    "message": "모든 설정과 즐겨찾기를 JSON 파일로 내보내 백업하거나 다른 기기로 마이그레이션할 수 있습니다."
+    "message": "JSON 파일을 통해 수동으로 데이터를 백업하거나 복원하여 다른 브라우저로 마이그레이션할 수 있습니다."
   },
   "exportBtn": {
     "message": "내보내기"
@@ -367,5 +355,11 @@
   },
   "chatTimeLabelHint": {
     "message": "각 메시지에 전송 시간 표시. 비활성화해도 시간 기록은 저장됩니다"
+  },
+  "gdriveTitle": {
+    "message": "Google Drive 동기화"
+  },
+  "gdriveHint": {
+    "message": "데이터를 Google Drive에 백업하여 여러 기기 간에 동기화합니다."
   }
 }
