--- a/_locales/hi/messages.json
+++ b/_locales/hi/messages.json
@@ -321,7 +321,7 @@
     "message": "चैट समय दिखाएं"
   },
   "chatTimeLabelHint": {
-    "message": "प्रत्येक संदेश पर भेजने का समय दिखाएं। अक्षम होने पर भी समय रिकॉर्ड सहेजे जाते हैं"
+    "message": "प्रत्येक संदेश पर भेजने का समय दिखाएं, चैट रिकॉर्ड जैसी स्पष्टता"
   },
   "exportTitle": {
     "message": "मैन्युअल सिंक"
