--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -321,7 +321,7 @@
     "message": "Показать время чата"
   },
   "chatTimeLabelHint": {
-    "message": "Показывать время отправки для каждого сообщения. Записи времени сохраняются даже при отключении"
+    "message": "Показывать время отправки для каждого сообщения, наглядно как в истории чата"
   },
   "exportTitle": {
     "message": "Ручная синхронизация"
