--- a/_locales/th/messages.json
+++ b/_locales/th/messages.json
@@ -321,7 +321,7 @@
     "message": "แสดงเวลาแชท"
   },
   "chatTimeLabelHint": {
-    "message": "แสดงเวลาส่งในแต่ละข้อความ บันทึกเวลาจะถูกบันทึกแม้ปิดใช้งาน"
+    "message": "แสดงเวลาส่งในแต่ละข้อความ ชัดเจนเหมือนประวัติแชท"
   },
   "exportTitle": {
     "message": "ซิงค์ด้วยตนเอง"
