--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -396,7 +396,7 @@
     "message": "Show Chat Time"
   },
   "chatTimeLabelHint": {
-    "message": "Display send time on each message. Time records are saved even when disabled"
+    "message": "Display send time on each message, as clear as a chat log"
   },
   "gdriveTitle": {
     "message": "Google Drive Sync"
